--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -1,5 +1,7 @@
 {
 
 "item.tutorialmod.ruby": "Ruby",
-"item.tutorialmod.gem": "Gem"
+"item.tutorialmod.gem": "Gem",
+"creativetab.tutorial_tab": "Tab",
+"block.tutorialmod.gem_block" : "Gem Block"
 }
